[gd_scene load_steps=4 format=3 uid="uid://dea7e6n46vei"]

[ext_resource type="PackedScene" uid="uid://cxxkv4w4el1ed" path="res://addons/orgprez/OrgPrezChunkList.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cypqlui1uoofd" path="res://addons/orgprez/OrgPrezOutline.tscn" id="3"]
[ext_resource type="Script" path="res://addons/orgprez/OrgPrezAudioTab.gd" id="6"]

[node name="OrgPrezAudioTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("6")

[node name="HSplit" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="Outline" parent="HSplit" instance=ExtResource("3")]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VSplit" type="VSplitContainer" parent="HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 60

[node name="CodeEditor" type="TextEdit" parent="HSplit/VSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChunkList" parent="HSplit/VSplit" instance=ExtResource("1")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EditPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Panel" type="HBoxContainer" parent="EditPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Prompter" type="LineEdit" parent="EditPanel/Panel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="EditPanel/Panel"]
layout_mode = 2

[node name="UpdateButton" type="Button" parent="EditPanel/Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "update"

[connection signal="headline_changed" from="HSplit/Outline" to="." method="_on_outline_headline_changed"]
[connection signal="node_selected" from="HSplit/Outline" to="." method="_on_headline_selected"]
[connection signal="audio_chunk_selected" from="HSplit/VSplit/ChunkList" to="." method="_on_audio_chunk_selected"]
[connection signal="chunk_selected" from="HSplit/VSplit/ChunkList" to="." method="_on_chunk_selected"]
[connection signal="macro_chunk_selected" from="HSplit/VSplit/ChunkList" to="." method="_on_macro_chunk_selected"]
[connection signal="text_changed" from="EditPanel/Panel/Prompter" to="." method="_on_Prompter_text_changed"]
[connection signal="pressed" from="EditPanel/Panel/VBoxContainer/UpdateButton" to="." method="_on_UpdateButton_pressed"]
